(Sculpt Mode) Drawing problem with fastnavigate enabled #45654

Closed
opened 2015-08-02 14:27:27 +02:00 by Oscar · 6 comments

System Information
Windows 10
Intel HD (Baytrail)
system-info.txt
Blender Version

Broken: blender-2.75 559e143 (Buildbot)

*Some faces are not drawn when fast navigate is enabled

Fast navigate disabled :

fndisabled.png

With Fast navigate enabled:

VBODisabled.png
VBOEnabled.png
Exact steps for others to reproduce the error

1.- Add cube
2.- Add Multires modifier and subdivide.
3.- Go to sculpt mode and enable fast navigate
4.- orbit/pan/zoom

**System Information** Windows 10 Intel HD (Baytrail) [system-info.txt](https://archive.blender.org/developer/F217076/system-info.txt) **Blender Version** Broken: blender-2.75 559e143 (Buildbot) *Some faces are not drawn when fast navigate is enabled **Fast navigate disabled :** ![fndisabled.png](https://archive.blender.org/developer/F217082/fndisabled.png) **With Fast navigate enabled:** ![VBODisabled.png](https://archive.blender.org/developer/F217077/VBODisabled.png) ![VBOEnabled.png](https://archive.blender.org/developer/F217080/VBOEnabled.png) **Exact steps for others to reproduce the error** 1.- Add cube 2.- Add Multires modifier and subdivide. 3.- Go to sculpt mode and enable fast navigate 4.- orbit/pan/zoom
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KINjO

Added subscriber: @KINjO

Added subscribers: @Psy-Fi, @ideasman42, @kevindietrich

Added subscribers: @Psy-Fi, @ideasman42, @kevindietrich

Can confirm this on Linux, but when VBO is enabled, drawing is fine. Summoning @Psy-Fi and @campbellbarton.

Can confirm this on Linux, but when VBO is enabled, drawing is fine. Summoning @Psy-Fi and @campbellbarton.

This issue was referenced by e90fea72c1

This issue was referenced by e90fea72c1430d270ccf4b5c3880f7e25e35947e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45654
No description provided.